# pin-ball-v2

./: .gitignore  CMakeLists.txt  main.c
api/: game.c  game.h
api/actions/: actions.c  actions.h
api/game/: game.c  game.h
api/physics/: physics.c  physics.h
api/renderer/: renderer.c  renderer.h
config/: settings.c  settings.h
core/: enums.h
core/ball/: ball.c  ball.h
core/empty/: empty.c  empty.h
core/graphic/: graphic.c  graphic.h
core/player/: player.c  player.h
core/state/: state.c  state.h
core/wall/: wall.c  wall.h
